===Changelog for NEI Recipe Handlers===
Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'

#Alpha 2.0.0

#Alpha 1.0.0:
 + Initial release