@@ -1,15 +1,9 @@
 package craftedMods.recipes.api;
 
-import java.io.InputStream;
-import java.util.*;
-import java.util.function.Supplier;
-
-import net.minecraft.util.ResourceLocation;
+import java.util.Set;
 
 public interface RecipeHandlerFactory {
 
 	public Set<RecipeHandler<?>> getRecipeHandlers();
-
-	public Map<ResourceLocation, Supplier<InputStream>> getResources();
 
 }
